[gd_scene load_steps=20 format=3 uid="uid://dpexgxgqryj5i"]

[ext_resource type="PackedScene" uid="uid://qvm166at85df" path="res://player.tscn" id="1"]
[ext_resource type="Script" path="res://HubLevel.gd" id="3"]
[ext_resource type="ArrayMesh" uid="uid://dv055suprntoi" path="res://game/Rocks/Rocks.obj" id="5"]
[ext_resource type="ArrayMesh" uid="uid://cypsv0ov5ivfr" path="res://game/Bushes/Bushes.obj" id="6"]
[ext_resource type="ArrayMesh" uid="uid://bpkjn4fwl7a8s" path="res://game/Weeds/weeds01.obj" id="7"]
[ext_resource type="PackedScene" uid="uid://c4478ilc23gnh" path="res://chicken.tscn" id="10"]
[ext_resource type="Texture2D" uid="uid://dhu2ja3fj3chf" path="res://game/Grass Floor/Grass_Floor.png" id="11_7ywxs"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_i7jf7"]
sky_top_color = Color(0.337108, 0.468522, 1, 1)
sky_horizon_color = Color(0.545005, 0.753449, 1, 1)
ground_bottom_color = Color(0.545098, 0.745098, 1, 1)
ground_horizon_color = Color(0.545098, 0.745098, 1, 1)

[sub_resource type="Sky" id="Sky_ivtgg"]
sky_material = SubResource("ProceduralSkyMaterial_i7jf7")

[sub_resource type="Environment" id="Environment_tkhwu"]
background_mode = 2
sky = SubResource("Sky_ivtgg")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 0.976471, 1)
ambient_light_energy = 1.35

[sub_resource type="BoxShape3D" id="BoxShape3D_2"]
size = Vector3(50, 1, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_texture = ExtResource("11_7ywxs")
uv1_scale = Vector3(10, 10, 10)
texture_filter = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(10, 5, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_3"]
size = Vector3(2, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.2, 0.8, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
material = SubResource("StandardMaterial3D_2")
size = Vector3(2, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_4"]
size = Vector3(2, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.2, 0.2, 0.8, 1)

[sub_resource type="BoxMesh" id="BoxMesh_2"]
material = SubResource("StandardMaterial3D_3")
size = Vector3(2, 1, 1)

[node name="HubLevel" type="Node3D"]
script = ExtResource("3")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tkhwu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0)

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_2")

[node name="CSGBox3D" type="CSGBox3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
size = Vector3(50, 1, 50)
material = SubResource("StandardMaterial3D_1")

[node name="Player" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Chickens" type="Node3D" parent="."]

[node name="Chicken1" parent="Chickens" instance=ExtResource("10")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.5, -5)

[node name="Chicken2" parent="Chickens" instance=ExtResource("10")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.5, -5)

[node name="Chicken3" parent="Chickens" instance=ExtResource("10")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.5, 5)

[node name="Chicken4" parent="Chickens" instance=ExtResource("10")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.5, 5)

[node name="Enclosure" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 8)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enclosure"]
shape = SubResource("BoxShape3D_1")

[node name="ChickenCountLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.697913, 2.33531, 1.27752)
billboard = 1
text = "Chicken save : 0/10"
font_size = 48

[node name="Level1Button" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1.5, -10)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level1Button"]
shape = SubResource("BoxShape3D_3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Level1Button"]
mesh = SubResource("BoxMesh_1")

[node name="Label3D" type="Label3D" parent="Level1Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
text = "Level 1"
font_size = 50

[node name="Level2Button" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1.5, -10)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level2Button"]
shape = SubResource("BoxShape3D_4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Level2Button"]
mesh = SubResource("BoxMesh_2")

[node name="Label3D" type="Label3D" parent="Level2Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
text = "Level 2"
font_size = 50

[node name="Rocks" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.5, -10)
mesh = ExtResource("5")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.5, -10)
mesh = ExtResource("5")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.5, 10)
mesh = ExtResource("5")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Rocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.5, 10)
mesh = ExtResource("5")

[node name="Bushes" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Bushes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.5, -8)
mesh = ExtResource("6")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Bushes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.5, -8)
mesh = ExtResource("6")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Bushes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.5, 8)
mesh = ExtResource("6")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Bushes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.5, 8)
mesh = ExtResource("6")

[node name="Weeds" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Weeds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.5, -6)
mesh = ExtResource("7")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Weeds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.5, -6)
mesh = ExtResource("7")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Weeds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.5, 6)
mesh = ExtResource("7")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Weeds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.5, 6)
mesh = ExtResource("7")

[node name="Grass" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Grass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.5, -4)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Grass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.5, -4)

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Grass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.5, 4)

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Grass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.5, 4)

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Grass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.5, -2)

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Grass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, -2)

[node name="MeshInstance3D7" type="MeshInstance3D" parent="Grass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.5, 2)

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Grass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, 2)

[connection signal="input_event" from="Level1Button" to="." method="_on_level_1_button_input_event"]
[connection signal="input_event" from="Level2Button" to="." method="_on_level_2_button_input_event"]
